ajout d'une fonctionnalité pour executer specifiquement un notebook refacto des notebooks, WIP zeroxs

--- a/docs/docs/integrations/document_loaders/pdfminer.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfminer.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "### Installation\n",
     "\n",
-    "Install **langchain_community**."
+    "Install **langchain_community** and **pdfminer-six**."
    ]
   },
   {
@@ -70,7 +70,7 @@
    },
    "cell_type": "code",
    "source": [
-    "%pip install -qU langchain_community pdfminer-six pillow\n",
+    "%pip install -qU langchain_community pdfminer-six\n",
     "%pip install -q ../../../../dist/patch_langchain_pdf_loader*.whl"
    ],
    "outputs": [
@@ -955,7 +955,6 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# Charger les variables d'environnement à partir du fichier .env\n",
     "load_dotenv()"
    ],
    "outputs": [
