--- a/docs/docs/integrations/document_loaders/pymupdf.ipynb
+++ b/docs/docs/integrations/document_loaders/pymupdf.ipynb
@@ -42,8 +42,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.273047697Z",
-     "start_time": "2024-12-13T14:30:50.568920Z"
+     "end_time": "2024-12-13T16:44:28.370708Z",
+     "start_time": "2024-12-13T16:44:28.367970Z"
     }
    },
    "cell_type": "code",
@@ -52,7 +52,7 @@
     "# os.environ[\"LANGSMITH_TRACING\"] = \"true\""
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -66,13 +66,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.323200277Z",
-     "start_time": "2024-12-13T14:30:50.623339Z"
+     "end_time": "2024-12-13T16:44:32.967493Z",
+     "start_time": "2024-12-13T16:44:28.418157Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "%pip install -qU langchain_community pymupdf pillow\n",
+    "%pip install -qU langchain_community pymupdf\n",
     "%pip install -qq ../../../../dist/patch_langchain_pdf_loader*.whl"
    ],
    "outputs": [
@@ -81,12 +81,11 @@
      "output_type": "stream",
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "zsh:1: no matches found: ../../../../dist/patch_langchain_pdf_loader*.whl\r\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -100,8 +99,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.390323983Z",
-     "start_time": "2024-12-13T14:30:54.309043Z"
+     "end_time": "2024-12-13T16:44:32.983899Z",
+     "start_time": "2024-12-13T16:44:32.980476Z"
     }
    },
    "cell_type": "code",
@@ -112,7 +111,7 @@
     "loader = PyMuPDFLoader(file_path)"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 21
   },
   {
    "metadata": {},
@@ -122,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.407413691Z",
-     "start_time": "2024-12-13T14:30:55.663869Z"
+     "end_time": "2024-12-13T16:44:33.109864Z",
+     "start_time": "2024-12-13T16:44:33.031139Z"
     }
    },
    "cell_type": "code",
@@ -138,18 +137,18 @@
        "Document(metadata={'source': './example_data/layout-parser-paper.pdf', 'file_path': './example_data/layout-parser-paper.pdf', 'total_pages': 16, 'format': 'PDF 1.5', 'title': '', 'author': '', 'subject': '', 'keywords': '', 'creator': 'LaTeX with hyperref', 'producer': 'pdfTeX-1.40.21', 'creationdate': '2021-06-22T01:27:10+00:00', 'moddate': '2021-06-22T01:27:10+00:00', 'trapped': '', 'page': 0}, page_content='LayoutParser: A Uniﬁed Toolkit for Deep\\nLearning Based Document Image Analysis\\nZejiang Shen1 (\\x00), Ruochen Zhang2, Melissa Dell3, Benjamin Charles Germain\\nLee4, Jacob Carlson3, and Weining Li5\\n1 Allen Institute for AI\\nshannons@allenai.org\\n2 Brown University\\nruochen zhang@brown.edu\\n3 Harvard University\\n{melissadell,jacob carlson}@fas.harvard.edu\\n4 University of Washington\\nbcgl@cs.washington.edu\\n5 University of Waterloo\\nw422li@uwaterloo.ca\\nAbstract. Recent advances in document image analysis (DIA) have been\\nprimarily driven by the application of neural networks. Ideally, research\\noutcomes could be easily deployed in production and extended for further\\ninvestigation. However, various factors like loosely organized codebases\\nand sophisticated model conﬁgurations complicate the easy reuse of im-\\nportant innovations by a wide audience. Though there have been on-going\\neﬀorts to improve reusability and simplify deep learning (DL) model\\ndevelopment in disciplines like natural language processing and computer\\nvision, none of them are optimized for challenges in the domain of DIA.\\nThis represents a major gap in the existing toolkit, as DIA is central to\\nacademic research across a wide range of disciplines in the social sciences\\nand humanities. This paper introduces LayoutParser, an open-source\\nlibrary for streamlining the usage of DL in DIA research and applica-\\ntions. The core LayoutParser library comes with a set of simple and\\nintuitive interfaces for applying and customizing DL models for layout de-\\ntection, character recognition, and many other document processing tasks.\\nTo promote extensibility, LayoutParser also incorporates a community\\nplatform for sharing both pre-trained models and full document digiti-\\nzation pipelines. We demonstrate that LayoutParser is helpful for both\\nlightweight and large-scale digitization pipelines in real-word use cases.\\nThe library is publicly available at https://layout-parser.github.io.\\nKeywords: Document Image Analysis · Deep Learning · Layout Analysis\\n· Character Recognition · Open Source library · Toolkit.\\n1\\nIntroduction\\nDeep Learning(DL)-based approaches are the state-of-the-art for a wide range of\\ndocument image analysis (DIA) tasks including document image classiﬁcation [11,\\narXiv:2103.15348v2  [cs.CV]  21 Jun 2021')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.408477017Z",
-     "start_time": "2024-12-13T14:30:56.021023Z"
+     "end_time": "2024-12-13T16:44:33.120043Z",
+     "start_time": "2024-12-13T16:44:33.116920Z"
     }
    },
    "cell_type": "code",
@@ -180,7 +179,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -190,8 +189,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.411879178Z",
-     "start_time": "2024-12-13T14:30:56.133045Z"
+     "end_time": "2024-12-13T16:44:33.233942Z",
+     "start_time": "2024-12-13T16:44:33.169225Z"
     }
    },
    "cell_type": "code",
@@ -213,18 +212,18 @@
        "6"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.416219872Z",
-     "start_time": "2024-12-13T14:30:56.493425Z"
+     "end_time": "2024-12-13T16:44:33.276569Z",
+     "start_time": "2024-12-13T16:44:33.273425Z"
     }
    },
    "cell_type": "code",
@@ -257,7 +256,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -299,8 +298,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.416768585Z",
-     "start_time": "2024-12-13T14:30:56.752533Z"
+     "end_time": "2024-12-13T16:44:33.398988Z",
+     "start_time": "2024-12-13T16:44:33.325406Z"
     }
    },
    "cell_type": "code",
@@ -336,7 +335,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -351,8 +350,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.417845190Z",
-     "start_time": "2024-12-13T14:30:57.031609Z"
+     "end_time": "2024-12-13T16:44:33.505652Z",
+     "start_time": "2024-12-13T16:44:33.417900Z"
     }
    },
    "cell_type": "code",
@@ -387,7 +386,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -402,8 +401,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.419299469Z",
-     "start_time": "2024-12-13T14:30:57.141790Z"
+     "end_time": "2024-12-13T16:44:33.607182Z",
+     "start_time": "2024-12-13T16:44:33.532819Z"
     }
    },
    "cell_type": "code",
@@ -519,7 +518,7 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 28
   },
   {
    "metadata": {},
@@ -553,8 +552,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.420052330Z",
-     "start_time": "2024-12-13T14:30:57.263445Z"
+     "end_time": "2024-12-13T16:44:35.353517Z",
+     "start_time": "2024-12-13T16:44:33.642071Z"
     }
    },
    "cell_type": "code",
@@ -568,13 +567,13 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.423611739Z",
-     "start_time": "2024-12-13T14:31:01.558975Z"
+     "end_time": "2024-12-13T16:46:26.661212Z",
+     "start_time": "2024-12-13T16:44:35.363491Z"
     }
    },
    "cell_type": "code",
@@ -669,7 +668,7 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 30
   },
   {
    "metadata": {},
@@ -684,8 +683,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.424261607Z",
-     "start_time": "2024-12-13T14:38:42.108840Z"
+     "end_time": "2024-12-13T16:46:28.263647Z",
+     "start_time": "2024-12-13T16:46:26.717349Z"
     }
    },
    "cell_type": "code",
@@ -699,13 +698,13 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:30.247379Z",
-     "start_time": "2024-12-13T14:38:47.176276Z"
+     "end_time": "2024-12-13T16:46:54.571582Z",
+     "start_time": "2024-12-13T16:46:28.268669Z"
     }
    },
    "cell_type": "code",
@@ -817,7 +816,7 @@
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 32
   },
   {
    "metadata": {},
@@ -827,8 +826,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:31.863265Z",
-     "start_time": "2024-12-13T14:47:30.308262Z"
+     "end_time": "2024-12-13T16:46:56.114753Z",
+     "start_time": "2024-12-13T16:46:54.615895Z"
     }
    },
    "cell_type": "code",
@@ -842,13 +841,13 @@
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:31.891930Z",
-     "start_time": "2024-12-13T14:47:31.879154Z"
+     "end_time": "2024-12-13T16:46:56.133056Z",
+     "start_time": "2024-12-13T16:46:56.122768Z"
     }
    },
    "cell_type": "code",
@@ -856,7 +855,6 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# Charger les variables d'environnement à partir du fichier .env\n",
     "load_dotenv()"
    ],
    "outputs": [
@@ -866,18 +864,18 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:31.929860Z",
-     "start_time": "2024-12-13T14:47:31.926910Z"
+     "end_time": "2024-12-13T16:46:56.176839Z",
+     "start_time": "2024-12-13T16:46:56.173695Z"
     }
    },
    "cell_type": "code",
@@ -888,13 +886,13 @@
     "    os.environ[\"OPENAI_API_KEY\"] = getpass(\"OpenAI API key =\")"
    ],
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.206826Z",
-     "start_time": "2024-12-13T14:47:31.977730Z"
+     "end_time": "2024-12-13T16:46:59.396885Z",
+     "start_time": "2024-12-13T16:46:56.220265Z"
     }
    },
    "cell_type": "code",
@@ -923,8 +921,8 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mRateLimitError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[18], line 14\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mpatch_langchain_community\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdocument_loaders\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mparsers\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpdf\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m (\n\u001B[1;32m      3\u001B[0m     convert_images_to_description,\n\u001B[1;32m      4\u001B[0m )\n\u001B[1;32m      6\u001B[0m loader \u001B[38;5;241m=\u001B[39m PyMuPDFLoader(\n\u001B[1;32m      7\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m./example_data/layout-parser-paper.pdf\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m      8\u001B[0m     mode\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpage\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     12\u001B[0m     ),\n\u001B[1;32m     13\u001B[0m )\n\u001B[0;32m---> 14\u001B[0m docs \u001B[38;5;241m=\u001B[39m \u001B[43mloader\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;28mprint\u001B[39m(docs[\u001B[38;5;241m5\u001B[39m]\u001B[38;5;241m.\u001B[39mpage_content)\n",
-      "File \u001B[0;32m~/PycharmProjects/patch_langchain_common/.venv/lib/python3.11/site-packages/langchain_core/document_loaders/base.py:31\u001B[0m, in \u001B[0;36mBaseLoader.load\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     29\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mload\u001B[39m(\u001B[38;5;28mself\u001B[39m) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m \u001B[38;5;28mlist\u001B[39m[Document]:\n\u001B[1;32m     30\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Load data into Document objects.\"\"\"\u001B[39;00m\n\u001B[0;32m---> 31\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mlist\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlazy_load\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[36], line 14\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mpatch_langchain_community\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdocument_loaders\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mparsers\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpdf\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m (\n\u001B[1;32m      3\u001B[0m     convert_images_to_description,\n\u001B[1;32m      4\u001B[0m )\n\u001B[1;32m      6\u001B[0m loader \u001B[38;5;241m=\u001B[39m PyMuPDFLoader(\n\u001B[1;32m      7\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m./example_data/layout-parser-paper.pdf\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m      8\u001B[0m     mode\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpage\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     12\u001B[0m     ),\n\u001B[1;32m     13\u001B[0m )\n\u001B[0;32m---> 14\u001B[0m docs \u001B[38;5;241m=\u001B[39m \u001B[43mloader\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;28mprint\u001B[39m(docs[\u001B[38;5;241m5\u001B[39m]\u001B[38;5;241m.\u001B[39mpage_content)\n",
+      "File \u001B[0;32m~/PycharmProjects/patch_langchain_common/.venv/lib/python3.11/site-packages/langchain_core/document_loaders/base.py:31\u001B[0m, in \u001B[0;36mBaseLoader.load\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     29\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mload\u001B[39m(\u001B[38;5;28mself\u001B[39m) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m \u001B[38;5;28mlist\u001B[39m[Document]:\n\u001B[1;32m     30\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Load data into Document objects.\"\"\"\u001B[39;00m\n\u001B[0;32m---> 31\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mlist\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mlazy_load())\n",
       "File \u001B[0;32m~/PycharmProjects/patch_langchain_common/patch_langchain_community/document_loaders/pdf.py:833\u001B[0m, in \u001B[0;36mPyMuPDFLoader.lazy_load\u001B[0;34m(self, **kwargs)\u001B[0m\n\u001B[1;32m    831\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m    832\u001B[0m     blob \u001B[38;5;241m=\u001B[39m Blob\u001B[38;5;241m.\u001B[39mfrom_path(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mfile_path)  \u001B[38;5;66;03m# type: ignore[attr-defined]\u001B[39;00m\n\u001B[0;32m--> 833\u001B[0m \u001B[38;5;28;01myield from\u001B[39;00m parser\u001B[38;5;241m.\u001B[39mlazy_parse(blob)\n",
       "File \u001B[0;32m~/PycharmProjects/patch_langchain_common/patch_langchain_community/document_loaders/parsers/pdf.py:1156\u001B[0m, in \u001B[0;36mPyMuPDFParser.lazy_parse\u001B[0;34m(self, blob)\u001B[0m\n\u001B[1;32m   1154\u001B[0m full_content \u001B[38;5;241m=\u001B[39m []\n\u001B[1;32m   1155\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m page \u001B[38;5;129;01min\u001B[39;00m doc:\n\u001B[0;32m-> 1156\u001B[0m     all_text \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_get_page_content\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdoc\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpage\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mblob\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mstrip()\n\u001B[1;32m   1157\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmode \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpage\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[1;32m   1158\u001B[0m         \u001B[38;5;28;01myield\u001B[39;00m Document(\n\u001B[1;32m   1159\u001B[0m             page_content\u001B[38;5;241m=\u001B[39mall_text,\n\u001B[1;32m   1160\u001B[0m             metadata\u001B[38;5;241m=\u001B[39m(doc_metadata \u001B[38;5;241m|\u001B[39m {\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpage\u001B[39m\u001B[38;5;124m\"\u001B[39m: page\u001B[38;5;241m.\u001B[39mnumber}),\n\u001B[1;32m   1161\u001B[0m         )\n",
       "File \u001B[0;32m~/PycharmProjects/patch_langchain_common/patch_langchain_community/document_loaders/parsers/pdf.py:1187\u001B[0m, in \u001B[0;36mPyMuPDFParser._get_page_content\u001B[0;34m(self, doc, page, blob)\u001B[0m\n\u001B[1;32m   1174\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m   1175\u001B[0m \u001B[38;5;124;03mGet the text of the page using PyMuPDF and RapidOCR and issue a warning\u001B[39;00m\n\u001B[1;32m   1176\u001B[0m \u001B[38;5;124;03mif it is empty.\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m   1184\u001B[0m \u001B[38;5;124;03m    str: The text content of the page.\u001B[39;00m\n\u001B[1;32m   1185\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m   1186\u001B[0m text_from_page \u001B[38;5;241m=\u001B[39m page\u001B[38;5;241m.\u001B[39mget_text(\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtext_kwargs)\n\u001B[0;32m-> 1187\u001B[0m images_from_page \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_extract_images_from_page\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdoc\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpage\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1188\u001B[0m tables_from_page \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_extract_tables_from_page(page)\n\u001B[1;32m   1189\u001B[0m extras \u001B[38;5;241m=\u001B[39m []\n",
@@ -949,7 +947,7 @@
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 36
   },
   {
    "metadata": {},
@@ -964,7 +962,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:36.216459574Z",
+     "end_time": "2024-12-13T16:46:59.400386810Z",
      "start_time": "2024-12-11T15:14:43.861257Z"
     }
    },
