--- a/docs/docs/integrations/document_loaders/pypdfium2.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfium2.ipynb
@@ -72,7 +72,7 @@
    },
    "cell_type": "code",
    "source": [
-    "%pip install -qU langchain_community pypdfium2 pillow\n",
+    "%pip install -qU langchain_community pypdfium2\n",
     "%pip install -qq ../../../../dist/patch_langchain_pdf_loader*.whl"
    ],
    "outputs": [
@@ -667,7 +667,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Extract images from the PDF in *text* format (can also be *html* or *markdown*) with tesseract: "
+   "source": "## Extract images from the PDF with tesseract:"
   },
   {
    "metadata": {
@@ -865,7 +865,6 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# Charger les variables d'environnement à partir du fichier .env\n",
     "load_dotenv()"
    ],
    "outputs": [
