--- a/docs/docs/integrations/document_loaders/pypdfloader.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfloader.ipynb
@@ -72,7 +72,7 @@
     }
    },
    "source": [
-    "%pip install -qU langchain_community pypdf pillow\n",
+    "%pip install -qU langchain_community pypdf\n",
     "%pip install -qq ../../../../dist/patch_langchain_pdf_loader*.whl"
    ],
    "outputs": [
@@ -849,7 +849,6 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# Charger les variables d'environnement à partir du fichier .env\n",
     "load_dotenv()"
    ],
    "outputs": [
