refacto des notebooks, WIP zeroxs

--- a/docs/docs/integrations/document_loaders/pymupdf.ipynb
+++ b/docs/docs/integrations/document_loaders/pymupdf.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "### Installation\n",
     "\n",
-    "Install **langchain_community**."
+    "Install **langchain_community** and **pymupdf**."
    ]
   },
   {
